# Ice-Cream-For-Ria

./: README.md
.github/workflows/: frontend-ci.yml  frontend-deploy.yml
backend/: README.md  pyproject.toml
backend/api/: __init__.py  main.py
backend/api/config/: __init__.py  api_config.py  enums.py
backend/api/core/: __init__.py
backend/api/crud/: __init__.py
backend/api/router/: __init__.py  app.py  lifespan.py  openapi_tags.json  utils.py
backend/api/router/endpoints/: __init__.py
backend/api/router/endpoints/default/: __init__.py  health.py
backend/api/schemas/: __init__.py
backend/api/schemas/bases/: __init__.py  base.py
backend/api/schemas/custom_types/: __init__.py
backend/api/utils/: __init__.py  constants_config.py  constants_router.py  utils.py
backend/docker/: api.Dockerfile
backend/scripts/: gunicorn_conf.py  start-backend.sh
backend/tests/: conftest.py
backend/tests/data/: test.env
backend/tests/test_endpoints/: __init__.py  test_index.py
frontend/: angular.json  karma.conf.js  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  confetti.service.ts
frontend/src/app/ice-cream-invitation/: ice-cream-invitation.component.css  ice-cream-invitation.component.html  ice-cream-invitation.component.spec.ts  ice-cream-invitation.component.ts
